load(
    "//absl/copts:rules.bzl",
    "absl17_cc_library",
)

licenses(["notice"])

absl17_cc_library(
    name = "string_view",
    srcs = [
        "string_view.cc",
    ],
    hdrs = [
        "string_view.h",
    ],
    deps = [
        "//absl/base",
        "//absl/base:config",
        "//absl/base:core_headers",
        "//absl/base:nullability",
        "//absl/base:throw_delegate",
    ],
)

absl17_cc_library(
    name = "strings",
    srcs = [
        "ascii.cc",
        "charconv.cc",
        "escaping.cc",
        "internal/charconv_bigint.cc",
        "internal/charconv_bigint.h",
        "internal/charconv_parse.cc",
        "internal/charconv_parse.h",
        "internal/damerau_levenshtein_distance.cc",
        "internal/memutil.cc",
        "internal/memutil.h",
        "internal/stl_type_traits.h",
        "internal/str_join_internal.h",
        "internal/str_split_internal.h",
        "internal/stringify_sink.cc",
        "internal/stringify_sink.h",
        "match.cc",
        "numbers.cc",
        "str_cat.cc",
        "str_replace.cc",
        "str_split.cc",
        "substitute.cc",
    ],
    hdrs = [
        "ascii.h",
        "charconv.h",
        "escaping.h",
        "has_absl_stringify.h",
        "internal/damerau_levenshtein_distance.h",
        "internal/string_constant.h",
        "match.h",
        "numbers.h",
        "str_cat.h",
        "str_join.h",
        "str_replace.h",
        "str_split.h",
        "string_view.h",
        "strip.h",
        "substitute.h",
    ],
    deps = [
        ":charset",
        ":internal",
        ":string_view",
        "//absl/base",
        "//absl/base:config",
        "//absl/base:core_headers",
        "//absl/base:endian",
        "//absl/base:iterator_traits_internal",
        "//absl/base:nullability",
        "//absl/base:raw_logging_internal",
        "//absl/base:throw_delegate",
        "//absl/memory",
        "//absl/meta:type_traits",
        "//absl/numeric:bits",
        "//absl/numeric:int128",
    ],
)

absl17_cc_library(
    name = "internal",
    srcs = [
        "internal/escaping.cc",
        "internal/ostringstream.cc",
        "internal/utf8.cc",
    ],
    hdrs = [
        "internal/escaping.h",
        "internal/ostringstream.h",
        "internal/resize_uninitialized.h",
        "internal/utf8.h",
    ],
    deps = [
        "//absl/base:config",
        "//absl/base:core_headers",
        "//absl/base:endian",
        "//absl/base:raw_logging_internal",
        "//absl/meta:type_traits",
    ],
)

absl17_cc_library(
    name = "has_ostream_operator",
    hdrs = [
        "has_ostream_operator.h",
    ],
    deps = [
        "//absl/base:config",
    ],
)

absl17_cc_library(
    name = "charset",
    hdrs = [
        "charset.h",
    ],
    deps = [
        ":string_view",
        "//absl/base:config",
    ],
)

absl17_cc_library(
    name = "cord_internal",
    srcs = [
        "internal/cord_internal.cc",
        "internal/cord_rep_btree.cc",
        "internal/cord_rep_btree_navigator.cc",
        "internal/cord_rep_btree_reader.cc",
        "internal/cord_rep_consume.cc",
        "internal/cord_rep_crc.cc",
    ],
    hdrs = [
        "internal/cord_data_edge.h",
        "internal/cord_internal.h",
        "internal/cord_rep_btree.h",
        "internal/cord_rep_btree_navigator.h",
        "internal/cord_rep_btree_reader.h",
        "internal/cord_rep_consume.h",
        "internal/cord_rep_crc.h",
        "internal/cord_rep_flat.h",
    ],
    visibility = [
        "//visibility:private",
    ],
    deps = [
        ":strings",
        "//absl/base:config",
        "//absl/base:core_headers",
        "//absl/base:endian",
        "//absl/base:nullability",
        "//absl/base:raw_logging_internal",
        "//absl/container:compressed_tuple",
        "//absl/container:container_memory",
        "//absl/container:inlined_vector",
        "//absl/crc:crc_cord_state",
        "//absl/functional:function_ref",
        "//absl/types:span",
    ],
)

absl17_cc_library(
    name = "cordz_update_tracker",
    hdrs = [
        "internal/cordz_update_tracker.h",
    ],
    visibility = [
        "//absl:__subpackages__",
    ],
    deps = [
        "//absl/base:config",
    ],
)

absl17_cc_library(
    name = "cord",
    srcs = [
        "cord.cc",
        "cord_analysis.cc",
        "cord_analysis.h",
    ],
    hdrs = [
        "cord.h",
        "cord_buffer.h",
    ],
    deps = [
        ":cord_internal",
        ":cordz_info",
        ":cordz_update_scope",
        ":cordz_update_tracker",
        ":internal",
        ":strings",
        "//absl/base:config",
        "//absl/base:core_headers",
        "//absl/base:endian",
        "//absl/base:nullability",
        "//absl/base:raw_logging_internal",
        "//absl/container:inlined_vector",
        "//absl/crc:crc32c",
        "//absl/crc:crc_cord_state",
        "//absl/functional:function_ref",
        "//absl/hash:weakly_mixed_integer",
        "//absl/meta:type_traits",
        "//absl/numeric:bits",
        "//absl/types:compare",
        "//absl/types:optional",
        "//absl/types:span",
    ],
)

absl17_cc_library(
    name = "cordz_handle",
    srcs = [
        "internal/cordz_handle.cc",
    ],
    hdrs = [
        "internal/cordz_handle.h",
    ],
    visibility = [
        "//absl:__subpackages__",
    ],
    deps = [
        "//absl/base:config",
        "//absl/base:no_destructor",
        "//absl/base:raw_logging_internal",
        "//absl/synchronization",
    ],
)

absl17_cc_library(
    name = "cordz_info",
    srcs = [
        "internal/cordz_info.cc",
    ],
    hdrs = [
        "internal/cordz_info.h",
    ],
    visibility = [
        "//absl:__subpackages__",
    ],
    deps = [
        ":cord_internal",
        ":cordz_functions",
        ":cordz_handle",
        ":cordz_statistics",
        ":cordz_update_tracker",
        "//absl/base",
        "//absl/base:config",
        "//absl/base:core_headers",
        "//absl/base:raw_logging_internal",
        "//absl/container:inlined_vector",
        "//absl/debugging:stacktrace",
        "//absl/synchronization",
        "//absl/time",
        "//absl/types:span",
    ],
)

absl17_cc_library(
    name = "cordz_update_scope",
    hdrs = [
        "internal/cordz_update_scope.h",
    ],
    visibility = [
        "//absl:__subpackages__",
    ],
    deps = [
        ":cord_internal",
        ":cordz_info",
        ":cordz_update_tracker",
        "//absl/base:config",
        "//absl/base:core_headers",
    ],
)

absl17_cc_library(
    name = "cordz_sample_token",
    srcs = [
        "internal/cordz_sample_token.cc",
    ],
    hdrs = [
        "internal/cordz_sample_token.h",
    ],
    visibility = [
        "//absl:__subpackages__",
    ],
    deps = [
        ":cordz_handle",
        ":cordz_info",
        "//absl/base:config",
    ],
)

absl17_cc_library(
    name = "cordz_functions",
    srcs = [
        "internal/cordz_functions.cc",
    ],
    hdrs = [
        "internal/cordz_functions.h",
    ],
    visibility = [
        "//absl:__subpackages__",
    ],
    deps = [
        "//absl/base:config",
        "//absl/base:core_headers",
        "//absl/base:raw_logging_internal",
        "//absl/profiling:exponential_biased",
    ],
)

absl17_cc_library(
    name = "cordz_statistics",
    hdrs = [
        "internal/cordz_statistics.h",
    ],
    visibility = [
        "//absl:__subpackages__",
    ],
    deps = [
        ":cordz_update_tracker",
        "//absl/base:config",
    ],
)

absl17_cc_library(
    name = "str_format",
    hdrs = [
        "str_format.h",
    ],
    deps = [
        ":str_format_internal",
        ":string_view",
        "//absl/base:config",
        "//absl/base:core_headers",
        "//absl/base:nullability",
        "//absl/types:span",
    ],
)

absl17_cc_library(
    name = "str_format_internal",
    srcs = [
        "internal/str_format/arg.cc",
        "internal/str_format/bind.cc",
        "internal/str_format/extension.cc",
        "internal/str_format/float_conversion.cc",
        "internal/str_format/output.cc",
        "internal/str_format/parser.cc",
    ],
    hdrs = [
        "internal/str_format/arg.h",
        "internal/str_format/bind.h",
        "internal/str_format/checker.h",
        "internal/str_format/constexpr_parser.h",
        "internal/str_format/extension.h",
        "internal/str_format/float_conversion.h",
        "internal/str_format/output.h",
        "internal/str_format/parser.h",
    ],
    visibility = [
        "//visibility:private",
    ],
    deps = [
        ":internal",
        ":strings",
        "//absl/base:config",
        "//absl/base:core_headers",
        "//absl/container:fixed_array",
        "//absl/container:inlined_vector",
        "//absl/functional:function_ref",
        "//absl/meta:type_traits",
        "//absl/numeric:bits",
        "//absl/numeric:int128",
        "//absl/numeric:representation",
        "//absl/types:optional",
        "//absl/types:span",
        "//absl/utility",
    ],
)
