load(
    "//absl/copts:rules.bzl",
    "absl17_cc_library",
)

licenses(["notice"])

absl17_cc_library(
    name = "time",
    srcs = [
        "civil_time.cc",
        "clock.cc",
        "duration.cc",
        "format.cc",
        "internal/get_current_time_chrono.inc",
        "internal/get_current_time_posix.inc",
        "time.cc",
    ],
    hdrs = [
        "civil_time.h",
        "clock.h",
        "time.h",
    ],
    deps = [
        "//absl/base",
        "//absl/base:config",
        "//absl/base:core_headers",
        "//absl/base:raw_logging_internal",
        "//absl/numeric:int128",
        "//absl/strings",
        "//absl/strings:string_view",
        "//absl/time/internal/cctz:civil_time",
        "//absl/time/internal/cctz:time_zone",
        "//absl/types:optional",
    ],
)
