load(
    "//absl/copts:rules.bzl",
    "absl17_cc_library",
)

licenses(["notice"])

absl17_cc_library(
    name = "any",
    hdrs = [
        "any.h",
    ],
    deps = [
        "//absl/base:config",
        "//absl/base:core_headers",
        "//absl/utility",
    ],
)

absl17_cc_library(
    name = "span",
    srcs = [
        "internal/span.h",
    ],
    hdrs = [
        "span.h",
    ],
    deps = [
        "//absl/algorithm",
        "//absl/base:config",
        "//absl/base:core_headers",
        "//absl/base:nullability",
        "//absl/base:throw_delegate",
        "//absl/hash:weakly_mixed_integer",
        "//absl/meta:type_traits",
    ],
)

absl17_cc_library(
    name = "optional",
    hdrs = [
        "optional.h",
    ],
    deps = [
        "//absl/base:config",
        "//absl/utility",
    ],
)

absl17_cc_library(
    name = "variant",
    hdrs = [
        "variant.h",
    ],
    deps = [
        "//absl/base:config",
        "//absl/utility",
    ],
)

absl17_cc_library(
    name = "compare",
    hdrs = [
        "compare.h",
    ],
    deps = [
        "//absl/base:config",
        "//absl/base:core_headers",
        "//absl/meta:type_traits",
    ],
)
