load(
    "//absl/copts:rules.bzl",
    "absl17_cc_library",
)

licenses(["notice"])

absl17_cc_library(
    name = "traits",
    hdrs = [
        "traits.h",
    ],
    deps = [
        "//absl/base:config",
        "//absl/numeric:bits",
        "//absl/numeric:int128",
    ],
)

absl17_cc_library(
    name = "distribution_caller",
    hdrs = [
        "distribution_caller.h",
    ],
    deps = [
        "//absl/base:config",
        "//absl/base:fast_type_id",
        "//absl/meta:type_traits",
        "//absl/utility",
    ],
)

absl17_cc_library(
    name = "fast_uniform_bits",
    hdrs = [
        "fast_uniform_bits.h",
    ],
    deps = [
        ":traits",
        "//absl/base:config",
        "//absl/meta:type_traits",
    ],
)

absl17_cc_library(
    name = "seed_material",
    srcs = [
        "seed_material.cc",
    ],
    hdrs = [
        "seed_material.h",
    ],
    deps = [
        ":fast_uniform_bits",
        "//absl/base:config",
        "//absl/base:dynamic_annotations",
        "//absl/base:raw_logging_internal",
        "//absl/strings",
        "//absl/types:optional",
        "//absl/types:span",
    ],
)

absl17_cc_library(
    name = "entropy_pool",
    srcs = [
        "entropy_pool.cc",
    ],
    hdrs = [
        "entropy_pool.h",
    ],
    deps = [
        ":platform",
        ":randen",
        ":seed_material",
        "//absl/base",
        "//absl/base:config",
        "//absl/base:core_headers",
        "//absl/random:seed_gen_exception",
        "//absl/types:span",
    ],
)

absl17_cc_library(
    name = "salted_seed_seq",
    hdrs = [
        "salted_seed_seq.h",
    ],
    deps = [
        ":seed_material",
        "//absl/container:inlined_vector",
        "//absl/meta:type_traits",
        "//absl/types:optional",
        "//absl/types:span",
    ],
)

absl17_cc_library(
    name = "iostream_state_saver",
    hdrs = [
        "iostream_state_saver.h",
    ],
    deps = [
        "//absl/base:config",
        "//absl/meta:type_traits",
        "//absl/numeric:int128",
    ],
)

absl17_cc_library(
    name = "generate_real",
    hdrs = [
        "generate_real.h",
    ],
    deps = [
        ":fastmath",
        ":traits",
        "//absl/meta:type_traits",
        "//absl/numeric:bits",
    ],
)

absl17_cc_library(
    name = "fastmath",
    hdrs = [
        "fastmath.h",
    ],
    deps = [
        "//absl/numeric:bits",
    ],
)

absl17_cc_library(
    name = "wide_multiply",
    hdrs = [
        "wide_multiply.h",
    ],
    deps = [
        ":traits",
        "//absl/base:config",
        "//absl/numeric:bits",
        "//absl/numeric:int128",
    ],
)

absl17_cc_library(
    name = "nonsecure_base",
    hdrs = [
        "nonsecure_base.h",
    ],
    deps = [
        ":entropy_pool",
        ":salted_seed_seq",
        ":seed_material",
        "//absl/base:config",
        "//absl/container:inlined_vector",
        "//absl/meta:type_traits",
    ],
)

absl17_cc_library(
    name = "pcg_engine",
    hdrs = [
        "pcg_engine.h",
    ],
    deps = [
        ":fastmath",
        ":iostream_state_saver",
        "//absl/base:config",
        "//absl/meta:type_traits",
        "//absl/numeric:bits",
        "//absl/numeric:int128",
    ],
)

absl17_cc_library(
    name = "randen_engine",
    hdrs = [
        "randen_engine.h",
    ],
    visibility = [
        "//absl/random:__pkg__",
    ],
    deps = [
        ":iostream_state_saver",
        ":randen",
        "//absl/base:endian",
        "//absl/meta:type_traits",
    ],
)

absl17_cc_library(
    name = "platform",
    srcs = [
        "randen_round_keys.cc",
    ],
    hdrs = [
        "platform.h",
        "randen_traits.h",
    ],
    deps = [
        "//absl/base:config",
    ],
)

absl17_cc_library(
    name = "randen",
    srcs = [
        "randen.cc",
    ],
    hdrs = [
        "randen.h",
    ],
    deps = [
        ":platform",
        ":randen_hwaes",
        ":randen_slow",
        "//absl/base:raw_logging_internal",
    ],
)

absl17_cc_library(
    name = "randen_slow",
    srcs = [
        "randen_slow.cc",
    ],
    hdrs = [
        "randen_slow.h",
    ],
    deps = [
        ":platform",
        "//absl/base:config",
        "//absl/base:core_headers",
        "//absl/base:endian",
        "//absl/numeric:int128",
    ],
)

absl17_cc_library(
    name = "randen_hwaes",
    srcs = [
        "randen_detect.cc",
    ],
    hdrs = [
        "randen_detect.h",
        "randen_hwaes.h",
    ],
    deps = [
        ":platform",
        ":randen_hwaes_impl",
        "//absl/base:config",
        "//absl/types:optional",
    ],
)

absl17_cc_library(
    name = "randen_hwaes_impl",
    srcs = [
        "randen_hwaes.cc",
        "randen_hwaes.h",
    ],
    copts = select({
        "@platforms//cpu:aarch64": [
            "-march=armv8-a+crypto",
        ],
        "@platforms//cpu:x86_64": [
            "-maes",
            "-msse4.1",
        ],
        "//conditions:default": [],
    }),
    deps = [
        ":platform",
        "//absl/base:config",
        "//absl/base:core_headers",
        "//absl/numeric:int128",
    ],
)

absl17_cc_library(
    name = "mock_helpers",
    hdrs = [
        "mock_helpers.h",
    ],
    deps = [
        "//absl/base:config",
        "//absl/base:fast_type_id",
        "//absl/types:optional",
    ],
)

absl17_cc_library(
    name = "nanobenchmark",
    srcs = [
        "nanobenchmark.cc",
    ],
    hdrs = [
        "nanobenchmark.h",
    ],
    deps = [
        ":platform",
        ":randen_engine",
        "//absl/base:config",
        "//absl/base:core_headers",
        "//absl/base:raw_logging_internal",
    ],
)

absl17_cc_library(
    name = "uniform_helper",
    hdrs = [
        "uniform_helper.h",
    ],
    deps = [
        ":traits",
        "//absl/base:config",
        "//absl/meta:type_traits",
    ],
)

absl17_cc_library(
    name = "mock_validators",
    hdrs = [
        "mock_validators.h",
    ],
    deps = [
        ":iostream_state_saver",
        ":uniform_helper",
        "//absl/base:config",
        "//absl/base:raw_logging_internal",
        "//absl/strings",
        "//absl/strings:string_view",
    ],
)
